--- a/src/components/ColumnArticle.astro
+++ b/src/components/ColumnArticle.astro
@@ -2,7 +2,7 @@
 import Author from "./Author.astro";
 import Sidebar from "./Sidebar.astro";
 import type { ColumnContent } from "../lib/microcms";
-import { formatDateJa, getCategoryLabel, getEyecatchUrl, getTagLabel } from "../lib/microcms";
+import { formatDateJa, getCategoryLabel, getEyecatchUrl, getTagEntries } from "../lib/microcms";
 
 interface Props {
   article: ColumnContent;
@@ -12,7 +12,8 @@ interface Props {
 const { article, isPreview = false } = Astro.props as Props;
 
 const categoryLabel = getCategoryLabel(article.category);
-const tagLabel = getTagLabel(article.tag);
+const tags = getTagEntries(article.tag);
+const firstTag = tags[0];
 const publishedDate = formatDateJa(article.publishedAt || article.createdAt);
 const eyecatchUrl = getEyecatchUrl(article.eyecatch);
 ---
@@ -26,10 +27,10 @@ const eyecatchUrl = getEyecatchUrl(article.eyecatch);
           <a href="/">TOP</a>
           <span>/</span>
           <a href="/column">コラム一覧</a>
-          {tagLabel && (
+          {firstTag && (
             <>
               <span>/</span>
-              <a href={`/column/tag/${encodeURIComponent(tagLabel)}`}>{tagLabel}</a>
+              <a href={`/column/tag/${encodeURIComponent(firstTag.id)}`}>{firstTag.label}</a>
             </>
           )}
           <span>/</span>
@@ -40,11 +41,11 @@ const eyecatchUrl = getEyecatchUrl(article.eyecatch);
         {publishedDate && (
           <div class="column-article__meta">
             <time datetime={article.publishedAt || article.createdAt}>{publishedDate}</time>
-            {tagLabel && (
-              <a href={`/column/tag/${encodeURIComponent(tagLabel)}`} class="column-tag-link">
-                #{tagLabel}
+            {tags.map((tag) => (
+              <a href={`/column/tag/${encodeURIComponent(tag.id)}`} class="column-tag-link">
+                #{tag.label}
               </a>
-            )}
+            ))}
           </div>
         )}
       </header>
