--- a/src/pages/column/index.astro
+++ b/src/pages/column/index.astro
@@ -45,9 +45,9 @@ const tags = Array.from(
   description="InsightBaseのコラム一覧です。"
 >
   <Fragment slot="head">
-    <style>
+    <style is:global>
       main {
-        padding: 0;
+        padding: 0 !important;
       }
     </style>
   </Fragment>
