--- a/src/styles/_column.scss
+++ b/src/styles/_column.scss
@@ -77,6 +77,12 @@
     color: var(--ink);
     padding: 0;
   }
+  h4{
+    margin:28px 0 10px;
+    font-size:18px;
+    color:var(--ink);
+    
+  }
 
   p {
     padding: 0;
