--- a/src/pages/column/index.astro
+++ b/src/pages/column/index.astro
@@ -41,8 +41,8 @@ const tags = Array.from(
 ---
 
 <Layout
-  title="コラム一覧 | InsightBase"
-  description="InsightBaseのコラム一覧です。"
+  title="ナレッジベース一覧 | InsightBase"
+  description="InsightBaseのナレッジベース記事一覧です。"
 >
   <Fragment slot="head">
     <style is:global>
@@ -55,8 +55,8 @@ const tags = Array.from(
   <section class="column-hub">
     <div class="content__inner column-hub__inner">
       <header class="column-hub__header">
-        <p class="column-hub__sub">InsightBase</p>
-        <h1>コラム一覧</h1>
+        <p class="column-hub__sub">Knowledge Base</p>
+        <h1>ナレッジベース</h1>
       </header>
 
       <div class="column-hub__filters">
