--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,6 +98,7 @@ const ogImageUrl = new URL(ogImage, baseUrl).toString();
           <a class="" href="/ga4-report-template">GA4レポート</a>
           <a class="" href="/googlead-report-template">Google広告レポート</a>
           <a class="" href="/faq">よくあるお問い合わせ</a>
+          <a class="" href="/column">ナレッジベース</a>
           <a class="btn primary" href="/inquiry">お問い合わせ</a>
         </nav>
       </div>
