--- a/src/pages/column/category/[categoryId].astro
+++ b/src/pages/column/category/[categoryId].astro
@@ -47,7 +47,7 @@ const columns = await getPublishedColumnsByCategory(categoryId).catch((error) =>
   <section class="column-hub">
     <div class="content__inner column-hub__inner">
       <header class="column-hub__header">
-        <p class="column-hub__sub">InsightBase</p>
+        <p class="column-hub__sub">Knowledge Base</p>
         <h1>{categoryName}に関する記事一覧</h1>
       </header>
 
