--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,13 +11,14 @@
       <ul class="footer__list">
         <li><a href="/ga4-report-template/">GA4レポートテンプレート</a></li>
         <li><a href="/googlead-report-template/">Google広告レポートテンプレート</a></li>
-        <li><a href="/inquiry">お問い合わせ</a></li>
+        <li><a href="/column">ナレッジベース</a></li>
       </ul>
 
       <!-- 中央 -->
       <ul class="footer__list">
         <li><a href="/terms/">利用規約</a></li>
         <li><a href="/tokushoho/">特定商取引法に基づく表記</a></li>
+        <li><a href="/inquiry">お問い合わせ</a></li>
       </ul>
 
       <!-- 右 -->
