--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,13 +37,13 @@ import Footer from "../components/Footer.astro";
     </div>
     <div class="lead__features --pt20">
       <div class="lead__feature">
-        <img src="/assets/img/nayami01.svg" alt="デザイン" />
+        <img src="/assets/img/nayami01.svg" alt="レポート作成の課題01「レポート作成に時間がとられすぎ」" />
         <h3>レポート作成に時間がとられすぎ</h3>
         <p>レポート作成にかなりの時間がかかり、本来の業務に手が回らない。</p>
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami02.svg" alt="マーケティング" />
+        <img src="/assets/img/nayami02.svg" alt="レポート作成の課題02「数字だけのレポートでは刺さらない」" />
         <h3>数字だけのレポートでは刺さらない</h3>
         <p>
           せっかくまとめた集計データも、数字の羅列だけでクライアントの反応が薄い。
@@ -51,13 +51,13 @@ import Footer from "../components/Footer.astro";
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami03.svg" alt="低価格" />
+        <img src="/assets/img/nayami03.svg" alt="レポート作成の課題03「レポートの体裁を整えるのが大変」" />
         <h3>レポートの体裁を整えるのが大変</h3>
         <p>レイアウト調整に時間がかかり、中身より見た目に労力を使っている。</p>
       </div>
 
       <div class="lead__feature">
-        <img src="/assets/img/nayami04.svg" alt="低価格" />
+        <img src="/assets/img/nayami04.svg" alt="レポート作成の課題04「案件ごとにフォーマットがバラバラ」" />
         <h3>案件ごとにフォーマットがバラバラ</h3>
         <p>クライアントごとに形式が違い、毎回ゼロから作り直している。</p>
       </div>
@@ -137,7 +137,7 @@ import Footer from "../components/Footer.astro";
       </p>
     </div>
     <div class="image-l">
-      <img src="/assets/img/pc-image.png" />
+      <img src="/assets/img/pc-image.png" alt="レポート自動化画面"/>
     </div>
   </div>
 </section>
