--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -7,7 +7,7 @@
         <h3>GA4レポートテンプレート</h3>
         <img
           src="/assets/img/screenshot/image03.jpg"
-          alt="多言語サイト向けレポート作成"
+          alt="GA4レポートテンプレート"
         />
         <p>17,600円（税込）</p>
         <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta"
@@ -19,7 +19,7 @@
         <h3>Google広告レポート</h3>
         <img
           src="/assets/img/screenshot/image07.jpg"
-          alt="独自コンバージョンレポート作成"
+          alt="Google広告レポートテンプレート"
         />
         <p>17,600円（税込）</p>
         <a href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="gadcta"
@@ -29,7 +29,7 @@
 
       <div class="cta_box">
         <h3>GA4＋Google広告レポート</h3>
-        <img src="/assets/img/screenshot/set.jpg" alt="営業資料連動型レポート作成" />
+        <img src="/assets/img/screenshot/set.jpg" alt="GA4＋Google広告レポート" />
         <p>29,800円（税込）</p>
         <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="setcta"
           >今すぐ購入する</a
