--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -3,7 +3,7 @@
 
 <aside class="column-sidebar" aria-label="サイドバー">
   <section class="column-widget">
-    <a href="/"><img src="/assets/img/column/ad01_square.jpg" /></a>
+    <a href="/"><img src="/assets/img/column/ad01_square.jpg" alt="InsightBaseでレポート自動化"/></a>
   </section>
 
   <section class="column-widget">
