--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -133,7 +133,7 @@ import Footer from "../components/Footer.astro";
         />
         流入分析からコンバージョンまで、改善提案につながるストーリーで構成されています。<br
         />
-        “数字を並べるだけ”ではない、 提出前提の実務レベルレポートです。
+        “数字を並べるだけ”ではない、 PDF提出前提の実務レベルレポートです。
       </p>
     </div>
     <div class="image-l">
