--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -154,7 +154,7 @@ const productJsonLd = {
           Studioの共有機能を使用してクライアント様と共有が可能。
           PDFデータでの共有も、Looker Studioの基本機能で簡単に出力できます。
         </p>
-        <p class="notice --pt20">本テンプレートは、PDF提出を前提にしたテンプレートになっています。</p>
+        <p class="notice --pt20">※ 本テンプレートは、PDF提出を前提にしたテンプレートになっています。</p>
       </div>
     </div>
   </div>
