--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -170,7 +170,7 @@ const productJsonLd = {
         />
         流入分析からコンバージョンまで、改善提案につながるストーリーで構成されています。<br
         />
-        “数字を並べるだけ”ではない、 提出前提の実務レベルレポートです。
+        “数字を並べるだけ”ではない、 PDF提出前提の実務レベルレポートです。
       </p>
     </div>
     <div class="image-l">
