--- a/src/pages/column/tag/[tag].astro
+++ b/src/pages/column/tag/[tag].astro
@@ -48,7 +48,7 @@ const tagName =
   <section class="column-hub">
     <div class="content__inner column-hub__inner">
       <header class="column-hub__header">
-        <p class="column-hub__sub">InsightBase</p>
+        <p class="column-hub__sub">Knowledge Base</p>
         <h1>{tagName}に関する記事一覧</h1>
       </header>
 
