--- a/src/styles/_column.scss
+++ b/src/styles/_column.scss
@@ -40,7 +40,7 @@
   }
 
   @media (max-width: 767px) {
-    padding: 22px;
+    padding: 22px 0;
   }
 
   h1 {
@@ -176,6 +176,11 @@
   border-radius: 50%;
   text-align: center;
   margin: 0 0 12px;
+
+  @media(max-width:768px){
+    width:55px;
+    height:55px;
+  }
 }
 
 .column-article__meta {
