--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -47,7 +47,7 @@ const productJsonLd = {
   </Fragment>
   <Hero
     hasBg={true}
-    title={`GA4<br>レポートテンプレート`}
+    title={`<span>アクセスレポートを自動化</span><br>GA4レポートテンプレート`}
     image="/assets/img/pc-image.png"
     ctaText="今すぐ購入する"
     ctaLink="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02"
