--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -47,7 +47,7 @@ const productJsonLd = {
   </Fragment>
   <Hero
     hasBg={true}
-    title={`Google広告<br>レポートテンプレート`}
+    title={`<span>毎月のレポート作成を自動化</span>Google広告テンプレート`}
     image="/assets/img/pc-image02.png"
     ctaText="今すぐ購入する"
     ctaLink="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03"
