--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.astro";
 >
   <Hero
     hasBg={true}
-    title={`毎月のレポート作成を、10分で終わらせる。`}
+    title={`<span>毎月のレポート作成を仕組み化。</span><br>GA4・広告レポート自動作成`}
     image="/assets/img/hero/hero-image.svg"
     ctaText="今すぐ購入する"
     ctaLink="#cta"
