--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -19,16 +19,29 @@
   gap: 40px;
 }
 
-
+.feature-title{
+  margin-bottom:20px;
+}
+.feature-title li{
+  list-style:none;
+  display:inline-block;
+  padding:3px 20px;
+  background:	#5f5f5f;
+  color:#fff;
+  margin-right:10px;
+}
 
 .hero__title {
   margin: 0;
-  font-size: 58px;
+  font-size: 50px;
   line-height: 1.25;
   letter-spacing: 0.02em;
   font-weight: 700;
   @media(max-width: 767px) {
     font-size: 41px;
+  }
+  span{
+    font-size:38px;
   }
 }
 
